--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -49,39 +49,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person              | Content                                                                        |
-| ---- | ------------------- | ------------------------------------------------------------------------------ |
-| 1    | Matt Goldman        | Adding a parallax effect to CollectionView                                     |
-| 2    | David Ortinau       | TBA                                                                            |
-| 3    | Luis Beltran        | TBA                                                                            |
-| 4    | Available           |                                                                                |
-| 5    | Available           |                                                                                |
-| 6    | Available           |                                                                                |
-| 7    | Sebastian Jensen    | TBA                                                                            |
-| 8    | Available           |                                                                                |
-| 9    | Mark Allibone       | Getting fit with MAUIReactor                                                   |
-| 10   | Available           |                                                                                |
-| 11   | Available           |                                                                                |
-| 12   | Anton Polkanov      | TBA                                                                            |
-| 13   | Available           |                                                                                |
-| 14   | Available           |                                                                                |
-| 15   | Nick Kovalsky       | TBA                                                                            |
-| 16   | Roman Jasek         | TBA |
-| 17   | Available           |                                                                                |
-| 18   | Julian Ewers-Peters | TBA                                                                            |
-| 19   | Matt Goldman        | Passing through attached behaviors to a child control                          |
-| 20   | Shaun Lawrence      | TBA                                                                            |
-| 21   | Nick Alonge         | TBA                                                                            |
-| 22   | Sam Basu            | Waiting in Style with .NET MAUI Apps                                           |
-| 23   | David Nsai          | TBA                                                                            |
-| 24   | Héctor Pérez        | TBA                                                                            |
-| 25   | Pavle Davitković    | TBA                                                                            |
-| 26   | Farshad Momtaz      | TBA                                                                            |
-| 27   | Adolfo Marinucci    | Building a task management app with MAUIReactor                                |
-| 28   | Daniel Monettelli   | TBA                                                                            |
-| 29   | David Ortinau       | TBA                                                                            |
-| 30   | Tanaka Mawere       | Making an InDrive/Uber clone using MAUI                                        |
-| 31   | Brandon Minnick     | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup |
+| Date | Person                   | Content                                                                        |
+| ---- | ------------------------ | ------------------------------------------------------------------------------ |
+| 1    | Matt Goldman             | Adding a parallax effect to CollectionView                                     |
+| 2    | David Ortinau            | TBA                                                                            |
+| 3    | Luis Beltran             | TBA                                                                            |
+| 4    | Available                |                                                                                |
+| 5    | Available                |                                                                                |
+| 6    | Available                |                                                                                |
+| 7    | Sebastian Jensen         | TBA                                                                            |
+| 8    | Available                |                                                                                |
+| 9    | Mark Allibone            | Getting fit with MAUIReactor                                                   |
+| 10   | Available                |                                                                                |
+| 11   | Matthew Robbins & SSW TV | Building Red Point                                                             |
+| 12   | Anton Polkanov           | TBA                                                                            |
+| 13   | Available                |                                                                                |
+| 14   | Available                |                                                                                |
+| 15   | Nick Kovalsky            | TBA                                                                            |
+| 16   | Roman Jasek              | TBA                                                                            |
+| 17   | Available                |                                                                                |
+| 18   | Julian Ewers-Peters      | TBA                                                                            |
+| 19   | Matt Goldman             | Passing through attached behaviors to a child control                          |
+| 20   | Shaun Lawrence           | TBA                                                                            |
+| 21   | Nick Alonge              | TBA                                                                            |
+| 22   | Sam Basu                 | Waiting in Style with .NET MAUI Apps                                           |
+| 23   | David Nsai               | TBA                                                                            |
+| 24   | Héctor Pérez             | TBA                                                                            |
+| 25   | Pavle Davitković         | TBA                                                                            |
+| 26   | Farshad Momtaz           | TBA                                                                            |
+| 27   | Adolfo Marinucci         | Building a task management app with MAUIReactor                                |
+| 28   | Daniel Monettelli        | TBA                                                                            |
+| 29   | David Ortinau            | TBA                                                                            |
+| 30   | Tanaka Mawere            | Making an InDrive/Uber clone using MAUI                                        |
+| 31   | Brandon Minnick          | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup |
 
 {: .goldie-table }
 
