--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -51,10 +51,10 @@ These are just examples. If you think something is interesting, there's a good c
 
 | Date | Person                   | Content                                                                        |
 | ---- | ------------------------ | ------------------------------------------------------------------------------ |
-| 1    | Matt Goldman             | Adding a parallax effect to CollectionView                                     |
+| 1    | Matt Goldman             | 📰 [Adding a parallax effect to CollectionView](/posts/parallax-collection/)  |
 | 2    | David Ortinau            | TBA                                                                            |
 | 3    | Luis Beltran             | TBA                                                                            |
-| 4    | Vladislav Antonyuk       | Barcode scanning with .NET MAUI                                                 |
+| 4    | Vladislav Antonyuk       | Barcode scanning with .NET MAUI                                                |
 | 5    | Available                |                                                                                |
 | 6    | Available                |                                                                                |
 | 7    | Sebastian Jensen         | TBA                                                                            |
