--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -55,7 +55,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 2    | David Ortinau            | 📰 [All the lists in .NET MAUI](https://dev.to/davidortinau/all-the-lists-in-net-maui-33bd) |
 | 3    | Luis Beltran             | TBA                                                                                          |
 | 4    | Vladislav Antonyuk       | Barcode scanning with .NET MAUI                                                              |
-| 5    | Available                |                                                                                              |
+| 5    | David Platt              | TBA                                                                                          |
 | 6    | Available                |                                                                                              |
 | 7    | Sebastian Jensen         | TBA                                                                                          |
 | 8    | Roman Jasek              | TBA                                                                                          |
