--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -55,7 +55,7 @@ These are just examples. If you think something is interesting, there's a good c
 | 2    | David Ortinau            | 📰 [All the lists in .NET MAUI](https://dev.to/davidortinau/all-the-lists-in-net-maui-33bd)                                           |
 | 3    | Luis Beltran             | 📰 [Animated splash screen in .NET MAUI Android](https://dev.to/icebeam7/animated-splash-screen-in-net-maui-android-2ipg)             |
 | 4    | Vladislav Antonyuk       | 📰 [Barcode scanning with .NET MAUI](https://vladislavantonyuk.github.io/articles/Various-methods-for-barcode-scanning-in-.NET-MAUI/) |
-| 5    | David Platt              | TBA                                                                                                                                    |
+| 5    | David Platt              | 📺 [The Joy of UX in .NET MAUI: An MBTA Case Study](https://www.youtube.com/watch?v=PGdihJt1pzA)                                      |
 | 6    | Available                |                                                                                                                                        |
 | 7    | Sebastian Jensen         | TBA                                                                                                                                    |
 | 8    | Roman Jasek              | TBA                                                                                                                                    |
