--- a/_posts/2024-05-19-mauiuijuly-24.md
+++ b/_posts/2024-05-19-mauiuijuly-24.md
@@ -49,39 +49,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person                   | Content                                                                                                                                |
-| ---- | ------------------------ | -------------------------------------------------------------------------------------------------------------------------------------- |
-| 1    | Matt Goldman             | 📰 [Adding a parallax effect to CollectionView](/posts/parallax-collection/)                                                          |
-| 2    | David Ortinau            | 📰 [All the lists in .NET MAUI](https://dev.to/davidortinau/all-the-lists-in-net-maui-33bd)                                           |
-| 3    | Luis Beltran             | 📰 [Animated splash screen in .NET MAUI Android](https://dev.to/icebeam7/animated-splash-screen-in-net-maui-android-2ipg)             |
-| 4    | Vladislav Antonyuk       | 📰 [Barcode scanning with .NET MAUI](https://vladislavantonyuk.github.io/articles/Various-methods-for-barcode-scanning-in-.NET-MAUI/) |
-| 5    | David Platt              | 📺 [The Joy of UX in .NET MAUI: An MBTA Case Study](https://www.youtube.com/watch?v=PGdihJt1pzA)                                      |
-| 6    | Available                |                                                                                                                                        |
-| 7    | Sebastian Jensen         | TBA                                                                                                                                    |
-| 8    | Roman Jasek              | TBA                                                                                                                                    |
-| 9    | Mark Allibone            | Getting fit with MAUIReactor                                                                                                           |
-| 10   | Daniel Quintero Henao    | TBA                                                                                                                                    |
-| 11   | Matthew Robbins & SSW TV | Building Red Point                                                                                                                     |
-| 12   | Anton Polkanov           | TBA                                                                                                                                    |
-| 13   | Michael Stonis           | .NET MAUI Bottom Sheet                                                                                                                 |
-| 14   | Michael Stonis           | In-page Navigation                                                                                                                     |
-| 15   | Nick Kovalsky            | TBA                                                                                                                                    |
-| 16   | Roman Jasek              | TBA                                                                                                                                    |
-| 17   | Diego Rivero             | TBA                                                                                                                                    |
-| 18   | Julian Ewers-Peters      | TBA                                                                                                                                    |
-| 19   | Matt Goldman             | Passing through attached behaviors to a child control                                                                                  |
-| 20   | Shaun Lawrence           | TBA                                                                                                                                    |
-| 21   | Nick Alonge              | TBA                                                                                                                                    |
-| 22   | Sam Basu                 | Waiting in Style with .NET MAUI Apps                                                                                                   |
-| 23   | David Nsai               | TBA                                                                                                                                    |
-| 24   | Héctor Pérez             | TBA                                                                                                                                    |
-| 25   | Pavle Davitković         | TBA                                                                                                                                    |
-| 26   | Farshad Momtaz           | TBA                                                                                                                                    |
-| 27   | Adolfo Marinucci         | Building a task management app with MAUIReactor                                                                                        |
-| 28   | Daniel Monettelli        | TBA                                                                                                                                    |
-| 29   | David Ortinau            | TBA                                                                                                                                    |
-| 30   | Tanaka Mawere            | Making an InDrive/Uber clone using MAUI                                                                                                |
-| 31   | Brandon Minnick          | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup                                                         |
+| Date | Person                   | Content                                                                                                                                                    |
+| ---- | ------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1    | Matt Goldman             | 📰 [Adding a parallax effect to CollectionView](/posts/parallax-collection/)                                                                              |
+| 2    | David Ortinau            | 📰 [All the lists in .NET MAUI](https://dev.to/davidortinau/all-the-lists-in-net-maui-33bd)                                                               |
+| 3    | Luis Beltran             | 📰 [Animated splash screen in .NET MAUI Android](https://dev.to/icebeam7/animated-splash-screen-in-net-maui-android-2ipg)                                 |
+| 4    | Vladislav Antonyuk       | 📰 [Barcode scanning with .NET MAUI](https://vladislavantonyuk.github.io/articles/Various-methods-for-barcode-scanning-in-.NET-MAUI/)                     |
+| 5    | David Platt              | 📺 [The Joy of UX in .NET MAUI: An MBTA Case Study](https://www.youtube.com/watch?v=PGdihJt1pzA)                                                          |
+| 6    | Available                |                                                                                                                                                            |
+| 7    | Sebastian Jensen         | 📰 [Creating a Gauge Control with SkiaSharp in .NET MAUI](https://medium.com/@tsjdevapps/create-a-gauge-control-using-skiasharp-in-net-maui-ce418e6320fb) |
+| 8    | Roman Jasek              | TBA                                                                                                                                                        |
+| 9    | Mark Allibone            | Getting fit with MAUIReactor                                                                                                                               |
+| 10   | Daniel Quintero Henao    | TBA                                                                                                                                                        |
+| 11   | Matthew Robbins & SSW TV | Building Red Point                                                                                                                                         |
+| 12   | Anton Polkanov           | TBA                                                                                                                                                        |
+| 13   | Michael Stonis           | .NET MAUI Bottom Sheet                                                                                                                                     |
+| 14   | Michael Stonis           | In-page Navigation                                                                                                                                         |
+| 15   | Nick Kovalsky            | TBA                                                                                                                                                        |
+| 16   | Roman Jasek              | TBA                                                                                                                                                        |
+| 17   | Diego Rivero             | TBA                                                                                                                                                        |
+| 18   | Julian Ewers-Peters      | TBA                                                                                                                                                        |
+| 19   | Matt Goldman             | Passing through attached behaviors to a child control                                                                                                      |
+| 20   | Shaun Lawrence           | TBA                                                                                                                                                        |
+| 21   | Nick Alonge              | TBA                                                                                                                                                        |
+| 22   | Sam Basu                 | Waiting in Style with .NET MAUI Apps                                                                                                                       |
+| 23   | David Nsai               | TBA                                                                                                                                                        |
+| 24   | Héctor Pérez             | TBA                                                                                                                                                        |
+| 25   | Pavle Davitković         | TBA                                                                                                                                                        |
+| 26   | Farshad Momtaz           | TBA                                                                                                                                                        |
+| 27   | Adolfo Marinucci         | Building a task management app with MAUIReactor                                                                                                            |
+| 28   | Daniel Monettelli        | TBA                                                                                                                                                        |
+| 29   | David Ortinau            | TBA                                                                                                                                                        |
+| 30   | Tanaka Mawere            | Making an InDrive/Uber clone using MAUI                                                                                                                    |
+| 31   | Brandon Minnick          | Upgrading from Xamarin.CommunityToolkit.Markup to CommunityToolkit.Maui.Markup                                                                             |
 
 {: .goldie-table }
 
